<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_cat_connection">
        <EditTextPreference
            android:key="pref_port"
            android:title="@string/pref_port_title"
            android:summary="@string/pref_port_summary"
            android:defaultValue="8765"
            android:inputType="number" />

        <CheckBoxPreference
            android:key="pref_network_all"
            android:title="@string/pref_network_title"
            android:summary="@string/pref_network_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_background">
        <CheckBoxPreference
            android:key="pref_autostart"
            android:title="@string/pref_autostart_title"
            android:summary="@string/pref_autostart_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="pref_foreground"
            android:title="@string/pref_foreground_title"
            android:summary="@string/pref_foreground_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_developer">
        <CheckBoxPreference
            android:key="pref_debug_toasts"
            android:title="@string/pref_debug_title"
            android:summary="@string/pref_debug_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>
